feat: modify explore_data.ipynb

--- a/notebook_ipynb/explore_data.ipynb
+++ b/notebook_ipynb/explore_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('main_data.csv', skiprows=1).iloc[:31, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['銷售日期', '星期', '銷售總額', '折扣金額', '營業額', '稅額', '營業淨額', '客數', '周轉率', '人均價',\n",
+      "       '交易數', '交易均價'],\n",
+      "      dtype='object')\n",
+      "-------------------------------------------------------\n",
+      "             周轉率        交易數\n",
+      "count  31.000000  31.000000\n",
+      "mean    0.659677  17.322581\n",
+      "std     0.413695   8.255855\n",
+      "min     0.140000   5.000000\n",
+      "25%     0.360000  11.500000\n",
+      "50%     0.520000  15.000000\n",
+      "75%     1.030000  23.000000\n",
+      "max     1.550000  38.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# show the columns and the describe stats\n",
+    "print(df.columns)\n",
+    "print('-------------------------------------------------------')\n",
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# non-holiday v.s holiday\n",
+    "df_holiday = df[df['星期'].isin(['六', '日'])]\n",
+    "df_non_holiday = df[df['星期'].isin(['一', '二', '三', '四', '五'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 31 entries, 0 to 30\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   銷售日期    31 non-null     object \n",
+      " 1   星期      31 non-null     object \n",
+      " 2   銷售總額    31 non-null     object \n",
+      " 3   折扣金額    31 non-null     object \n",
+      " 4   營業額     31 non-null     object \n",
+      " 5   稅額      31 non-null     object \n",
+      " 6   營業淨額    31 non-null     object \n",
+      " 7   客數      31 non-null     object \n",
+      " 8   周轉率     31 non-null     float64\n",
+      " 9   人均價     31 non-null     object \n",
+      " 10  交易數     31 non-null     int64  \n",
+      " 11  交易均價    31 non-null     object \n",
+      "dtypes: float64(1), int64(1), object(10)\n",
+      "memory usage: 3.0+ KB\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -588,14 +665,16 @@
        "30    9  6,317  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('main_data.csv', skiprows=1)\n",
-    "df.iloc[:31, :]"
+    "df.describe()\n",
+    "df.info()\n",
+    "\n",
+    "df"
    ]
   }
  ],
