--- a/notebook_ipynb/main_lab.ipynb
+++ b/notebook_ipynb/main_lab.ipynb
@@ -230,6 +230,15 @@
     "               values=['sales_result', 'sales_discount', 'guest_num'],\n",
     "               aggfunc='mean')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('cthd_report_aug_transform.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
