add: new sales_detail and update ipynb

--- a/notebook_ipynb/main_lab.ipynb
+++ b/notebook_ipynb/main_lab.ipynb
@@ -233,11 +233,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('cthd_report_aug_transform.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['交易序號', '發票編號', '類別名稱', '商品名稱', '數量', '點單金額', '客數', '商品單位'], dtype='object')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用檔案: 點餐明細(1)\n",
+    "file_path = '/Users/lucaslee/Documents/GitHub/Lucas-Data-Scientist-Lab/data_cthd_Aug/點餐明細 (1).csv'\n",
+    "\n",
+    "df_detail = pd.read_csv(file_path)\n",
+    "df_detail.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_list = ['交易序號', '類別名稱', '商品名稱', '數量', '點單金額']\n",
+    "\n",
+    "df_detail = df_detail[column_list]\n",
+    "\n",
+    "# chi2eng rename the columns\n",
+    "df_detail.columns = ['sales_date', 'product_type', 'product_name', 'amount', 'price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only want the first 8 char of the sales_date data and transform to datetime\n",
+    "df_detail['sales_date'] = pd.to_datetime(df_detail.sales_date.apply(lambda x: x[:8]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_detail.to_csv('cthd_sales_detail_aug_transform.csv', index=False)"
    ]
   }
  ],
