add alc report aug csv and edit main_lab.ipynb

--- a/notebook_ipynb/main_lab.ipynb
+++ b/notebook_ipynb/main_lab.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "weekend        62.333333      929.916667  64353.250000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "Index(['交易序號', '發票編號', '類別名稱', '商品名稱', '數量', '點單金額', '客數', '商品單位'], dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_alc.head()\n",
+    "df_alc_clean = df_alc[['sales_date', 'product_type', 'product_name', 'product_price', 'product_amount', 'sales_price', 'discount', 'discount_total', 'real_receive_price']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_71534/1563608779.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_alc_clean['sales_date'] = pd.to_datetime(df_alc_clean['sales_date'], format='%Y-%m-%d %H:%M:%S')\n",
+      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_71534/1563608779.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_alc_clean['discount_total'] = df_alc_clean['discount_total'].astype(int)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales_date</th>\n",
+       "      <th>product_type</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>product_price</th>\n",
+       "      <th>product_amount</th>\n",
+       "      <th>sales_price</th>\n",
+       "      <th>discount</th>\n",
+       "      <th>discount_total</th>\n",
+       "      <th>real_receive_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-08-15 19:59:55</td>\n",
+       "      <td>Other Classic</td>\n",
+       "      <td>Dry Martini</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>320</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2022-08-05 23:47:35</td>\n",
+       "      <td>Beer</td>\n",
+       "      <td>PERONI draft beer</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2022-08-05 23:47:35</td>\n",
+       "      <td>Beer</td>\n",
+       "      <td>PERONI draft beer</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2022-08-05 23:47:35</td>\n",
+       "      <td>Signature Cocktail</td>\n",
+       "      <td>龍柏</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2022-08-05 23:47:35</td>\n",
+       "      <td>Signature Cocktail</td>\n",
+       "      <td>哈庫那瑪塔塔</td>\n",
+       "      <td>420.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>420</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>420</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            sales_date        product_type       product_name  product_price  \\\n",
+       "0  2022-08-15 19:59:55       Other Classic        Dry Martini          320.0   \n",
+       "8  2022-08-05 23:47:35                Beer  PERONI draft beer          250.0   \n",
+       "9  2022-08-05 23:47:35                Beer  PERONI draft beer          250.0   \n",
+       "11 2022-08-05 23:47:35  Signature Cocktail                 龍柏          400.0   \n",
+       "12 2022-08-05 23:47:35  Signature Cocktail             哈庫那瑪塔塔          420.0   \n",
+       "\n",
+       "    product_amount  sales_price  discount  discount_total  real_receive_price  \n",
+       "0              1.0          320       0.0               0                 320  \n",
+       "8              1.0          250       0.0               0                 250  \n",
+       "9              1.0          250       0.0               0                 250  \n",
+       "11             1.0          400       0.0               0                 400  \n",
+       "12             1.0          420       0.0               0                 420  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data transform: need to transform the columns: sales_date, discount_total\n",
+    "df_alc_clean['sales_date'] = pd.to_datetime(df_alc_clean['sales_date'], format='%Y-%m-%d %H:%M:%S')\n",
+    "df_alc_clean['discount_total'] = df_alc_clean['discount_total'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -767,181 +924,135 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sales_date</th>\n",
-       "      <th>order_num</th>\n",
-       "      <th>product_name</th>\n",
-       "      <th>label_name</th>\n",
-       "      <th>label_price</th>\n",
-       "      <th>product_price</th>\n",
        "      <th>product_amount</th>\n",
        "      <th>sales_price</th>\n",
-       "      <th>discount</th>\n",
-       "      <th>discount_name</th>\n",
-       "      <th>discount_total</th>\n",
        "      <th>real_receive_price</th>\n",
-       "      <th>price_net</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>product_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-08-15 19:59:55</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Dry Martini</td>\n",
-       "      <td>With Lemon Peels</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>320.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>320</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>320</td>\n",
-       "      <td>305.0</td>\n",
-       "      <td>Other Classic</td>\n",
+       "      <th>Signature Cocktail</th>\n",
+       "      <td>1210.0</td>\n",
+       "      <td>478270</td>\n",
+       "      <td>475502</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2022-08-05 23:47:35</td>\n",
-       "      <td>3</td>\n",
-       "      <td>PERONI draft beer</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>238.0</td>\n",
-       "      <td>Beer</td>\n",
+       "      <th>Classic Cocktail</th>\n",
+       "      <td>237.0</td>\n",
+       "      <td>82460</td>\n",
+       "      <td>81530</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2022-08-05 23:47:35</td>\n",
-       "      <td>3</td>\n",
-       "      <td>PERONI draft beer</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>238.0</td>\n",
-       "      <td>Beer</td>\n",
+       "      <th>Other Classic</th>\n",
+       "      <td>161.0</td>\n",
+       "      <td>57300</td>\n",
+       "      <td>56880</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2022-08-05 23:47:35</td>\n",
-       "      <td>3</td>\n",
-       "      <td>龍柏</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>400</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>400</td>\n",
-       "      <td>381.0</td>\n",
-       "      <td>Signature Cocktail</td>\n",
+       "      <th>Single Malt</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>55670</td>\n",
+       "      <td>54360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2022-08-05 23:47:35</td>\n",
-       "      <td>3</td>\n",
-       "      <td>哈庫那瑪塔塔</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>420.0</td>\n",
+       "      <th>Beer</th>\n",
+       "      <td>196.0</td>\n",
+       "      <td>36000</td>\n",
+       "      <td>30317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gin</th>\n",
+       "      <td>59.0</td>\n",
+       "      <td>25470</td>\n",
+       "      <td>25470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shot</th>\n",
+       "      <td>204.0</td>\n",
+       "      <td>15650</td>\n",
+       "      <td>15450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>House Wine</th>\n",
+       "      <td>107.0</td>\n",
+       "      <td>11900</td>\n",
+       "      <td>11900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cognac</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5700</td>\n",
+       "      <td>5700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Champagne</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>420</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>420</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>Signature Cocktail</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bourbon</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>600</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Blended</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>500</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>燒酒</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>250</td>\n",
+       "      <td>250</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             sales_date order_num       product_name        label_name  \\\n",
-       "0   2022-08-15 19:59:55         6        Dry Martini  With Lemon Peels   \n",
-       "8   2022-08-05 23:47:35         3  PERONI draft beer               NaN   \n",
-       "9   2022-08-05 23:47:35         3  PERONI draft beer               NaN   \n",
-       "11  2022-08-05 23:47:35         3                 龍柏               NaN   \n",
-       "12  2022-08-05 23:47:35         3             哈庫那瑪塔塔               NaN   \n",
-       "\n",
-       "    label_price  product_price  product_amount  sales_price  discount  \\\n",
-       "0           0.0          320.0             1.0          320       0.0   \n",
-       "8           0.0          250.0             1.0          250       0.0   \n",
-       "9           0.0          250.0             1.0          250       0.0   \n",
-       "11          0.0          400.0             1.0          400       0.0   \n",
-       "12          0.0          420.0             1.0          420       0.0   \n",
-       "\n",
-       "   discount_name discount_total  real_receive_price  price_net  \\\n",
-       "0            NaN              0                 320      305.0   \n",
-       "8            NaN              0                 250      238.0   \n",
-       "9            NaN              0                 250      238.0   \n",
-       "11           NaN              0                 400      381.0   \n",
-       "12           NaN              0                 420      400.0   \n",
-       "\n",
-       "          product_type  \n",
-       "0        Other Classic  \n",
-       "8                 Beer  \n",
-       "9                 Beer  \n",
-       "11  Signature Cocktail  \n",
-       "12  Signature Cocktail  "
+       "                    product_amount  sales_price  real_receive_price\n",
+       "product_type                                                       \n",
+       "Signature Cocktail          1210.0       478270              475502\n",
+       "Classic Cocktail             237.0        82460               81530\n",
+       "Other Classic                161.0        57300               56880\n",
+       "Single Malt                   49.0        55670               54360\n",
+       "Beer                         196.0        36000               30317\n",
+       "Gin                           59.0        25470               25470\n",
+       "Shot                         204.0        15650               15450\n",
+       "House Wine                   107.0        11900               11900\n",
+       "Cognac                         4.0         5700                5700\n",
+       "Champagne                      1.0         5000                5000\n",
+       "Bourbon                        2.0          600                 600\n",
+       "Blended                        1.0          500                 500\n",
+       "燒酒                             1.0          250                 250"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_alc.head()"
+    "# tryna see the pivot table of sales total\n",
+    "df_alc_clean.groupby('product_type')[['product_amount', 'sales_price', 'real_receive_price']].agg('sum').sort_values('sales_price', ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      2022-08-15 19:59:55\n",
-       "8      2022-08-05 23:47:35\n",
-       "9      2022-08-05 23:47:35\n",
-       "11     2022-08-05 23:47:35\n",
-       "12     2022-08-05 23:47:35\n",
-       "               ...        \n",
-       "4201   2022-08-12 00:29:54\n",
-       "4202   2022-08-12 00:29:54\n",
-       "4203   2022-08-12 00:29:54\n",
-       "4204   2022-08-12 00:29:54\n",
-       "4205   2022-08-12 00:29:54\n",
-       "Name: sales_date, Length: 2018, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# data transform\n",
-    "pd.to_datetime(df_alc['sales_date'], format='%Y-%m-%d %H:%M:%S')"
+    "df_alc_clean.to_csv('ctdh_alc_sales_aug_transform.csv', index=False)"
    ]
   }
  ],
