db: update psql script for data transformation

--- a/notebook_ipynb/main_lab.ipynb
+++ b/notebook_ipynb/main_lab.ipynb
@@ -275,7 +275,7 @@
     "file_path = '/Users/lucaslee/Documents/GitHub/Lucas-Data-Scientist-Lab/data_cthd_Aug/點餐明細 (1).csv'\n",
     "\n",
     "df_detail = pd.read_csv(file_path)\n",
-    "df_detail.columns"
+    "print(df_detail.columns)"
    ]
   },
   {
