--- a/notebook_ipynb/main_lab.ipynb
+++ b/notebook_ipynb/main_lab.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "weekend        62.333333      929.916667  64353.250000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,18 +256,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['交易序號', '發票編號', '類別名稱', '商品名稱', '數量', '點單金額', '客數', '商品單位'], dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['交易序號', '發票編號', '類別名稱', '商品名稱', '數量', '點單金額', '客數', '商品單位'], dtype='object')\n"
+     ]
     }
    ],
    "source": [
@@ -280,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +522,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +695,7 @@
        "4  240.0  1.0   240     0.0  NaN    0   240  229.0             炸物  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,143 +750,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_71534/1563608779.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_63769/381828266.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_alc_clean['sales_date'] = pd.to_datetime(df_alc_clean['sales_date'], format='%Y-%m-%d %H:%M:%S')\n",
-      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_71534/1563608779.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_63769/381828266.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_alc_clean['discount_total'] = df_alc_clean['discount_total'].astype(int)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sales_date</th>\n",
-       "      <th>product_type</th>\n",
-       "      <th>product_name</th>\n",
-       "      <th>product_price</th>\n",
-       "      <th>product_amount</th>\n",
-       "      <th>sales_price</th>\n",
-       "      <th>discount</th>\n",
-       "      <th>discount_total</th>\n",
-       "      <th>real_receive_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-08-15 19:59:55</td>\n",
-       "      <td>Other Classic</td>\n",
-       "      <td>Dry Martini</td>\n",
-       "      <td>320.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>320</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2022-08-05 23:47:35</td>\n",
-       "      <td>Beer</td>\n",
-       "      <td>PERONI draft beer</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2022-08-05 23:47:35</td>\n",
-       "      <td>Beer</td>\n",
-       "      <td>PERONI draft beer</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>250</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2022-08-05 23:47:35</td>\n",
-       "      <td>Signature Cocktail</td>\n",
-       "      <td>龍柏</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>400</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2022-08-05 23:47:35</td>\n",
-       "      <td>Signature Cocktail</td>\n",
-       "      <td>哈庫那瑪塔塔</td>\n",
-       "      <td>420.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>420</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>420</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            sales_date        product_type       product_name  product_price  \\\n",
-       "0  2022-08-15 19:59:55       Other Classic        Dry Martini          320.0   \n",
-       "8  2022-08-05 23:47:35                Beer  PERONI draft beer          250.0   \n",
-       "9  2022-08-05 23:47:35                Beer  PERONI draft beer          250.0   \n",
-       "11 2022-08-05 23:47:35  Signature Cocktail                 龍柏          400.0   \n",
-       "12 2022-08-05 23:47:35  Signature Cocktail             哈庫那瑪塔塔          420.0   \n",
-       "\n",
-       "    product_amount  sales_price  discount  discount_total  real_receive_price  \n",
-       "0              1.0          320       0.0               0                 320  \n",
-       "8              1.0          250       0.0               0                 250  \n",
-       "9              1.0          250       0.0               0                 250  \n",
-       "11             1.0          400       0.0               0                 400  \n",
-       "12             1.0          420       0.0               0                 420  "
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -900,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +916,7 @@
        "燒酒                             1.0          250                 250"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +928,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2018 entries, 0 to 4205\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column              Non-Null Count  Dtype         \n",
+      "---  ------              --------------  -----         \n",
+      " 0   sales_date          2018 non-null   datetime64[ns]\n",
+      " 1   product_type        2018 non-null   object        \n",
+      " 2   product_name        2018 non-null   object        \n",
+      " 3   product_price       2018 non-null   int64         \n",
+      " 4   product_amount      2018 non-null   int64         \n",
+      " 5   sales_price         2018 non-null   int64         \n",
+      " 6   discount            2018 non-null   int64         \n",
+      " 7   discount_total      2018 non-null   int64         \n",
+      " 8   real_receive_price  2018 non-null   int64         \n",
+      "dtypes: datetime64[ns](1), int64(6), object(2)\n",
+      "memory usage: 157.7+ KB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_63769/1772046814.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_alc_clean['product_price'] = df_alc_clean['product_price'].astype(int)\n",
+      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_63769/1772046814.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_alc_clean['product_amount'] = df_alc_clean['product_amount'].astype(int)\n",
+      "/var/folders/r5/sw4x2qc12wz22xrjq85dxj940000gn/T/ipykernel_63769/1772046814.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_alc_clean['discount'] = df_alc_clean['discount'].astype(int)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_alc_clean['product_price'] = df_alc_clean['product_price'].astype(int)\n",
+    "df_alc_clean['product_amount'] = df_alc_clean['product_amount'].astype(int)\n",
+    "df_alc_clean['discount'] = df_alc_clean['discount'].astype(int)\n",
+    "\n",
+    "df_alc_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +998,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1072,12 +1012,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
